--- a/product/Product2.html
+++ b/product/Product2.html
@@ -6,21 +6,32 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<div class="header">
-    <a href="../index.html"><img src="../style/logo/1.png" alt="logo"></a>
-    <ul class="menu">
-        <li><a href="../index.html">Главная</a></li>
-        <li><a href="../сatalog.html">Каталог</a></li>
-        <li><a href="../contacts.html">Контакты</a></li>
-    </ul>
-</div>
+<div class="container">
+    <div class="header">
+        <a href="../index.html"><img src="../style/logo/1.png" alt="logo" class="logo"></a>
+        <ul class="menu">
+            <li><a href="../index.html">Главная</a></li>
+            <li><a href="../сatalog.html">Каталог</a>
+                <ul class="submenu">
+                    <li><a href="../index.html">Пример 1</a></li>
+                    <li><a href="../index.html">Пример 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="../contacts.html">Контакты</a></li>
+        </ul>
+    </div>
 <h2>PS 4 PRO White 1x</h2>
-<a href="../сatalog/img/2.jpg" target="_blank"><img src="../сatalog/img/2.jpg" alt="ps4 pro" class="img-product"></a>
+    <div class="product-float"><a href="../сatalog/img/2.jpg" target="_blank"><img src="../сatalog/img/2.jpg" alt="ps4 pro" class="img-product"></a>
+    </div>
 <h3 class="style-h">Краткое описание товара</h3>
 <p class="style-p-k"><span class="span-p">И</span>грайте в новейшие игры c необычайной четкостью изображения с 4K*;
     оттенки кожи становятся теплее,
     объекты
     приобретают более реалистичные текстуры, а окружение выглядит непривычно живым.</p>
+    <div>
+        <a href="#" class="buy">Купить</a>
+    </div>
 <h3 class="style-h">Характеристики</h3>
 <div>
     <table class="main-table-product">
@@ -65,7 +76,7 @@
     Благодаря телевизорам HDR в совместимых играх для PS4 отображается почти весь спектр цветов, доступный человеческому
     глазу, что делает окружение невероятно живым и правдоподобным.
 </p>
-<div>
+<!--<div>
     <table class="twink-table-product">
         <tr>
             <td rowspan="4">1</td>
@@ -95,8 +106,9 @@
 
     </table>
 </div>
-<div class="style-footer-div">
-    <footer class="style-footer">Все права защищены &copy;</footer>
-</div>
+-->
+    <div class="style-footer-div">
+        <footer class="style-footer">Все права защищены &copy;</footer>
+    </div>
 </body>
 </html>
