--- a/contacts.html
+++ b/contacts.html
@@ -6,14 +6,21 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<div class="header">
-    <a href="index.html"><img src="style/logo/1.png" alt="logo"></a>
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="сatalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-</div>
+<div class="container">
+    <div class="header">
+        <a href="index.html"><img src="style/logo/1.png" alt="logo" class="logo"></a>
+        <ul class="menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="сatalog.html">Каталог</a>
+                <ul class="submenu">
+                    <li><a href="index.html">Пример 1</a></li>
+                    <li><a href="index.html">Пример 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
 <h2>Напишите нам</h2>
 <form action="#">
     Имя <input type="text" class="form-contacts-name" placeholder="Введите имя"><br>
@@ -33,9 +40,10 @@
 <p>График работы:</p>
 <p>Будни: 09:00 - 21:00</p>
 <p>Выходные: 11:00 - 20:00</p><br>
+    <div class="map">
 <script type="text/javascript" charset="utf-8" async
-        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-<p>Наша корпорация предоставляет широкий спектр услуг по&nbsp;доставке товаров из&nbsp;Германии</p>
+        src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab0916fccd77bcd6dd460fcc0532a79bfc79df6211fec42a15c90b19f98c07d9a&amp;width=100%&amp;height=374&amp;lang=ru_RU&amp;scroll=true"></script>
+    </div>
 <div class="style-footer-div">
     <footer class="style-footer">Все права защищены &copy;</footer>
 </div>
