--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<div class="header">
-<a href="index.html"><img src="style/logo/1.png" alt="logo"></a>
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="сatalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-</div>
-
-<h2>Tralling incorporated</h2>
-<p>Добро пожаловать в&nbsp;нашу компанию. Наша компания занимается доставкой грузов из&nbsp;Германии.</p>
-<div class="style-footer-div">
-    <footer class="style-footer">Все права защищены &copy;</footer>
+<div class="container">
+    <div class="header">
+        <a href="index.html"><img src="style/logo/1.png" alt="logo" class="logo"></a>
+        <ul class="menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="сatalog.html">Каталог</a>
+                <ul class="submenu">
+                    <li><a href="index.html">Пример 1</a></li>
+                    <li><a href="index.html">Пример 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+    <h2>Tralling incorporated</h2>
+    <p>Добро пожаловать в&nbsp;нашу компанию. Наша компания занимается доставкой грузов из&nbsp;Германии.</p>
+    <div class="style-footer-div">
+        <footer class="style-footer">Все права защищены &copy;</footer>
+    </div>
 </div>
 </body>
 </html>
