--- a/сatalog.html
+++ b/сatalog.html
@@ -6,23 +6,40 @@
     <title>Tralling inc.</title>
 </head>
 <body>
-<div class="header">
-    <a href="index.html"><img src="style/logo/1.png" alt="logo"></a>
-    <ul class="menu">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="сatalog.html">Каталог</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
-</div>
-<h2>Каталог</h2>
-<a href="product/Product1.html"> <img src="сatalog/img/1.jpg" alt="ps4 pro" width="190"></a>
-<p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
-<a href="product/Product2.html"> <img src="сatalog/img/2.jpg" alt="ps4 pro" width="190"></a>
-<p><a href="product/Product2.html">Подробнее о&nbsp;товаре</a></p>
-<a href="product/Product3.html"><img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
-<p><a href="product/Product3.html">Подробнее о&nbsp;товаре</a></p>
-<div class="style-footer-div">
-    <footer class="style-footer">Все права защищены &copy;</footer>
-</div>
+<div class="container">
+    <div class="header">
+        <a href="index.html"><img src="style/logo/1.png" alt="logo" class="logo"></a>
+        <ul class="menu">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="сatalog.html">Каталог</a>
+                <ul class="submenu">
+                    <li><a href="index.html">Пример 1</a></li>
+                    <li><a href="index.html">Пример 2</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+    </div>
+    <h2>Каталог</h2>
+    <div class="catalog-main">
+
+        <div class="catalog-a"><a href="product/Product1.html"> <img src="сatalog/img/1.jpg" alt="ps4 pro" width="190"></a>
+            <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+        </div>
+
+        <div class="catalog-a"><a href="product/Product2.html"> <img src="сatalog/img/2.jpg" alt="ps4 pro" width="190"></a>
+            <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+        </div>
+
+        <div class="catalog-a"><a href="product/Product3.html"> <img src="сatalog/img/3.jpg" alt="ps4 pro" width="190"></a>
+            <p><a href="product/Product1.html">Подробнее о&nbsp;товаре</a></p>
+        </div>
+
+    </div>
+
+    <div class="style-footer-div">
+        <footer class="style-footer">Все права защищены &copy;</footer>
+    </div>
 </body>
 </html>
